sistemata la navbar  con position fixed e z-index

--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
 
 body {
   color: #33475B;
+  min-width: 1400px
 }
 
 h2 {
@@ -96,7 +97,12 @@ a {
   display: table;
   clear: both;
 }
-
+.fixed{
+  width: 100%;
+    position: fixed;
+    top: 0;
+    z-index: 100;
+}
 
 
 .float_left {
@@ -104,7 +110,7 @@ a {
 }
 
 .menu_left {
-  width: 30%;
+      margin-left: 9%;
 }
 
 .menu_left a, .menu_right a {
@@ -112,13 +118,18 @@ a {
 }
 
 .menu_right {
-  width: 80%;
+    width: 56%;
   text-align: right;
+
 }
 
-#navtop {
-  height: 80px;
-  margin-top: 2%;
+.navtop {
+  width: 100%;
+    min-width: 900px;
+    background-color: #F4F9FD;
+    border: 1px solid black;
+    padding: 0.7%;
+}
 }
 
 .logo {
@@ -126,18 +137,20 @@ a {
   margin-top: 7px;
 }
 
-#navbottom {
+.navbottom {
   height: 50px;
   margin-top: 15px
 }
 
 .submenu_left {
-  width: 20%
+  width: 20%;
+      margin-top: 4%;
 }
 
 .submenu_right {
   width: 60%;
   text-align: right;
+      margin-top: 4%;
 }
 
 .navmain {
@@ -430,4 +443,43 @@ transform: translate(100%, 10px);
   border-radius: 6px;
   border: 1px solid white;
   display: inline-block;
+}
+
+.col_6{
+  width: 50%;
+      margin-bottom: 1%;
+      margin-left: 39%;
+
+}
+.col_6 a{
+color: white;
+padding: 2%
+}
+.footer_hr{
+  width: 73%;
+  margin-left: 15%;
+  margin-bottom: 1%
+}
+}
+.col_7{
+  margin-top: 1%;
+    width: ;
+    margin-left: 5%;
+    color: white;
+}
+
+.col_7 a {
+  color: white;
+}
+
+.logo_footer{
+  color: white;
+  background-color: white
+}
+.footer_right{
+  width: 10%
+}
+.footer_left{
+  width: 56%;
+margin-left: 18%;
 }
